kotlin/programming-kotlin_code/essence/output/assignment.output
assignment.kts:4:1: error: assignments are not expressions, and only expressions are allowed in this context
a = b = c //ERROR
^
